# vlense

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
examples/: pdf_qa.py
vlense/constants/: messages.py  patterns.py  prompts.py
vlense/core/: __init__.py  types.py  vlense.py
vlense/errors/: exceptions.py
vlense/lib/: __init__.py  bm25.py  image.py  pdf.py  retrieval.py
vlense/models/: __init__.py  colflor.py  colpali.py  litellmmodel.py  openai_model.py  types.py
vlense/tests/: test_vlense.py
